<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Container for the main screen containing toolbar and the listview -->
    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="practise.layouts.allinallelectronics.MainActivity">

        <!-- <android.support.v7.widget.Toolbar
             android:id="@+id/app_toolbar"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@color/colorPrimary"
             android:elevation="4dp"
             app:navigationIcon="@drawable/left-arrow32"
             app:title="@string/app_name" />

         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_below="@id/app_toolbar"
             android:layout_marginTop="10dp"
             android:background="@color/colorPrimary"
             android:elevation="4dp"
             app:logo="@drawable/holo"
             app:navigationIcon="@drawable/left-arrow32"
             app:subtitle="An Electronics shop"
             app:title="@string/app_name" />

         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="10dp"
             android:background="#00ff00"
             android:elevation="4dp"
             app:subtitle="Subtitle"
             app:title="@string/toolbar_title" />-->

        <!-- Toolbar widget with child widgets -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/app_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/clr_toolbar_background"
            android:elevation="4dp">

            <TextView
                style="@style/AshuText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/toolbar_title" />

        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"

                    android:background="@drawable/banner_electronics">

                    <TextView
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="15dp"
                        android:text="Electronics" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/banner_electical">

                    <TextView
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/lbl_electrical" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/banner_mechanical">

                    <TextView
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/lbl_mechanical" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/banner_computerscince">

                    <TextView
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/lbl_computer" />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <!-- SIDEBAR appears when swiped from left side of the screen -->
    <!--- The sidebar takes the form of an list of options and thus is same as a listview -->
    <android.support.design.widget.NavigationView
        android:id="@+id/design_navigation_view"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/clr_lightgreen"
        app:menu="@menu/menu_sidebar" />

    <!-- <android.support.design.widget.NavigationView
         android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_gravity="right|end"
         app:menu="@menu/menu_sidebar"
         android:background="@color/clr_lightgreen"/>-->


</android.support.v4.widget.DrawerLayout>